<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient"
    tools:context=".activities.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="364dp"
            android:layout_height="205dp"
            android:paddingBottom="0dp"
            app:srcCompat="@drawable/fa" />

        <TextView
            android:id="@+id/fluidAlgorithms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/fluid_algorithms"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#d1d1d1"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/splashProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/white"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/originalDevs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rmitDevs"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/original_developers"
        android:textColor="#c9c9c9"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/rmitDevs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/rmit_developers"
        android:textColor="#d1d1d1"
        android:textSize="12sp"
        android:textStyle="bold" />

</RelativeLayout>